tests/num-record-01/out.txt
error: mismatched types: expected int * bool, found unit
  ┌─ err.sml:2:1
  │
2 │ val _: t = ()
  │ ^^^^^^^^^^^^^

typechecking failed
